--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -115,6 +115,9 @@
                                     <constraint firstAttribute="trailing" secondItem="dZg-s3-BFy" secondAttribute="trailing" id="evu-FP-E8H"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Vzy-y5-7c7">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
@@ -125,6 +128,8 @@
                             <constraint firstItem="s28-UY-zQq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Kq4-en-n6g"/>
                             <constraint firstItem="bbP-qv-nhy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Lz3-t9-xLT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bbP-qv-nhy" secondAttribute="bottom" id="OGU-sH-4pv"/>
+                            <constraint firstItem="Vzy-y5-7c7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="OHL-h5-rBI"/>
+                            <constraint firstItem="Vzy-y5-7c7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Sq8-dY-IXN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JDe-ul-kdf" secondAttribute="bottom" id="Ssr-dB-CPl"/>
                             <constraint firstItem="bbP-qv-nhy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-20" id="YFi-LJ-vR1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eg5-2L-iCg" secondAttribute="trailing" constant="20" id="a6f-tg-8sx"/>
@@ -134,6 +139,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="Vzy-y5-7c7" id="iyL-He-q4f"/>
                         <outlet property="counterLabel" destination="iUg-mY-mol" id="rgU-KN-8Q6"/>
                         <outlet property="imageView" destination="yOS-rf-fot" id="0jZ-X8-vxM"/>
                         <outlet property="questionTitleLabel" destination="s28-UY-zQq" id="P4X-oJ-atH"/>
